--- a/summer-school/header.html
+++ b/summer-school/header.html
@@ -8,6 +8,6 @@
     <a href="registration.html">Registration</a> |
     <a href="schedule.html">Programme</a> |
     <a href="location.html">Location &amp; Travel</a> |
-    <a href="organisers.html">Organizers</a>
+    <a href="organisers.html">Organisers</a>
   </nav>
 </header>
