--- a/summer-school/index.html
+++ b/summer-school/index.html
@@ -17,8 +17,7 @@
         guided exercises, and a poster session.
       </p>
       <div class="badge-row">
-        <span class="badge">3 mini-courses</span>
-        <span class="badge">Exercises (problem sessions)</span>
+        <span class="badge">4 mini-courses</span>
         <span class="badge">Poster session</span>
         <span class="badge">Networking</span>
       </div>
@@ -35,7 +34,7 @@
         <div class="k">City</div><div>Brussels, Belgium</div>
         <div class="k">Venue</div><div>VUB campus (exact building/room: <em>TBA</em>)</div>
         <div class="k">Audience</div><div>MSc / PhD / Postdoc / Researchers</div>
-        <div class="k">Format</div><div>Three mini-courses (3h theory + 2h exercises each) + poster session</div>
+        <div class="k">Format</div><div>Four mini-courses + poster session</div>
         <div class="k">Fees</div><div><em>TBA</em></div>
       </div>
     </section>
@@ -48,13 +47,18 @@
           <p><strong>Instructor:</strong> Karin Baur <br>(<em>Ruhr-Universität Bochum & University of Leeds</em>)</p>
         </div>
         <div class="card">
-          <h3>Rack (co)homology</h3>
-          <p><strong>Instructor:</strong> Markus Szymik <br>(<em>University of Sheffield</em>)</p>
+          <h3>TBA</h3>
+          <p><strong>Instructor:</strong> Pavel Etingof <br>(<em>Massachusetts Institute of Technology</em>)</p>
+          <p>TBC</p>
         </div>
         <div class="card">
           <h3>Topological quantum theory</h3>
           <p><strong>Instructor:</strong> Eric Rowell<br>(<em>Texas A&M University & University of Leeds</em>)</p>
           <p>TBC</p>
+        </div>
+        <div class="card">
+          <h3>Rack (co)homology</h3>
+          <p><strong>Instructor:</strong> Markus Szymik <br>(<em>University of Sheffield</em>)</p>
         </div>
       </div>
       <p class="small" style="margin-top: 0.75rem;">
