--- a/summer-school/schedule.html
+++ b/summer-school/schedule.html
@@ -78,13 +78,18 @@
           <p>(abstract to be added).</p>
         </div>
         <div class="card">
-          <h3>Rack (co)homology</h3>
-          <p><strong>Instructor:</strong> Markus Szymik</p>
-          <<p>(abstract to be added).</p>
+          <h3>TBA</h3>
+          <p><strong>Instructor:</strong> Pavel Etingof (TBC)</p>
+          <p>(abstract to be added).</p>
         </div>
         <div class="card">
           <h3>Topological quantum theory</h3>
           <p><strong>Instructor:</strong> Eric Rowell (TBC)</p>
+          <p>(abstract to be added).</p>
+        </div>
+        <div class="card">
+          <h3>Rack (co)homology</h3>
+          <p><strong>Instructor:</strong> Markus Szymik</p>
           <p>(abstract to be added).</p>
         </div>
       </div>
