--- a/summer-school/index.html
+++ b/summer-school/index.html
@@ -13,7 +13,7 @@
     <section class="hero">
       <h2>Overview</h2>
       <p class="subtitle">
-        A training week for MSc students, PhD students, postdocs, and researchers, featuring three mini-courses,
+        A training week for MSc students, PhD students, postdocs, and researchers, featuring four mini-courses,
         guided exercises, and a poster session.
       </p>
       <div class="badge-row">
@@ -47,9 +47,8 @@
           <p><strong>Instructor:</strong> Karin Baur <br>(<em>Ruhr-Universität Bochum & University of Leeds</em>)</p>
         </div>
         <div class="card">
-          <h3>TBA</h3>
+          <h3>Symmetric tensor categories</h3>
           <p><strong>Instructor:</strong> Pavel Etingof <br>(<em>Massachusetts Institute of Technology</em>)</p>
-          <p>TBC</p>
         </div>
         <div class="card">
           <h3>Topological quantum theory</h3>
