--- a/summer-school/schedule.html
+++ b/summer-school/schedule.html
@@ -78,7 +78,7 @@
           <p>(abstract to be added).</p>
         </div>
         <div class="card">
-          <h3>TBA</h3>
+          <h3>Symmetric tensor categories</h3>
           <p><strong>Instructor:</strong> Pavel Etingof (TBC)</p>
           <p>(abstract to be added).</p>
         </div>
