--- a/summer-school/index.html
+++ b/summer-school/index.html
@@ -43,7 +43,8 @@
       <h2>Mini-courses</h2>
       <div class="card-grid">
         <div class="card">
-          <h3>Basic Cluster theory</h3>
+          <h3>Combinatorial surface models for cluster algebras and cluster categories
+</h3>
           <p><strong>Instructor:</strong> Karin Baur <br>(<em>Ruhr-Universität Bochum & University of Leeds</em>)</p>
         </div>
         <div class="card">
@@ -56,7 +57,7 @@
           <p>TBC</p>
         </div>
         <div class="card">
-          <h3>Rack (co)homology</h3>
+          <h3>Homology of racks and quandles</h3>
           <p><strong>Instructor:</strong> Markus Szymik <br>(<em>University of Sheffield</em>)</p>
         </div>
       </div>
