Schweigert's name instead of Rowell

--- a/summer-school/index.html
+++ b/summer-school/index.html
@@ -53,8 +53,8 @@
         </div>
         <div class="card">
           <h3>Topological quantum theory</h3>
-          <p><strong>Instructor:</strong> Eric Rowell<br>(<em>Texas A&M University & University of Leeds</em>)</p>
-          <p>TBC</p>
+          <p><strong>Instructor:</strong> Christoph Schweigert <br>(<em>Hamburg University</em>)</p>
+          <p>TBA</p>
         </div>
         <div class="card">
           <h3>Homology of racks and quandles</h3>
