--- a/summer-school/schedule.html
+++ b/summer-school/schedule.html
@@ -57,17 +57,17 @@
 <tr><td>Tue 9 Jun</td><td>10:30–12:00</td><td>Exercises / problem session — Karin Baur</td></tr>
 <tr><td>Tue 9 Jun</td><td>12:00–14:00</td><td>Lunch</td></tr>
 <tr><td>Tue 9 Jun</td><td>14:30–16:30</td><td>Poster session</td></tr>
-<tr><td>Wed 10 Jun</td><td>09:00–10:00</td><td>Theory — Eric Rowell</td></tr>
+<tr><td>Wed 10 Jun</td><td>09:00–10:00</td><td>Theory — Christoph Schweigert</td></tr>
 <tr><td>Wed 10 Jun</td><td>10:00–10:30</td><td>Break</td></tr>
 <tr><td>Wed 10 Jun</td><td>10:30–11:30</td><td>Theory — Markus Szymik</td></tr>
 <tr><td>Wed 10 Jun</td><td>12:00–14:00</td><td>Lunch</td></tr>
-<tr><td>Wed 10 Jun</td><td>14:30–16:30</td><td>Exercises — Eric Rowell</td></tr>
+<tr><td>Wed 10 Jun</td><td>14:30–16:30</td><td>Exercises — Christoph Schweigert</td></tr>
 <tr><td>Thu 11 Jun</td><td>09:00–10:00</td><td>Theory — Markus Szymik</td></tr>
 <tr><td>Thu 11 Jun</td><td>10:00–10:30</td><td>Break</td></tr>
-<tr><td>Thu 11 Jun</td><td>10:30–11:30</td><td>Theory — Eric Rowell</td></tr>
+<tr><td>Thu 11 Jun</td><td>10:30–11:30</td><td>Theory — Christoph Schweigert</td></tr>
 <tr><td>Thu 11 Jun</td><td>12:00–14:00</td><td>Lunch</td></tr>
 <tr><td>Thu 11 Jun</td><td>14:30–16:30</td><td>Exercises — Markus Szymik</td></tr>
-<tr><td>Fri 12 Jun</td><td>09:00–10:00</td><td>Theory — Eric Rowell</td></tr>
+<tr><td>Fri 12 Jun</td><td>09:00–10:00</td><td>Theory — Christoph Schweigert</td></tr>
 <tr><td>Fri 12 Jun</td><td>10:00–10:30</td><td>Break</td></tr>
 <tr><td>Fri 12 Jun</td><td>10:30–11:30</td><td>Theory — Markus Szymik</td></tr>
 <tr><td>Fri 12 Jun</td><td>12:00–14:00</td><td>Lunch</td></tr>
@@ -158,8 +158,8 @@ discuss the Delannoy category.
 </p>
         </div>
         <div class="card">
-          <h3>Topological quantum theory</h3>
-          <p><strong>Instructor:</strong> Eric Rowell (TBC)</p>
+          <h3>TBA</h3>
+          <p><strong>Instructor:</strong> Christoph Schweigert (TBC)</p>
           <p>(abstract to be added).</p>
         </div>
         <div class="card">
