--- a/summer-school/index.html
+++ b/summer-school/index.html
@@ -52,9 +52,9 @@
           <p><strong>Instructor:</strong> Pavel Etingof <br>(<em>Massachusetts Institute of Technology</em>)</p>
         </div>
         <div class="card">
-          <h3>Topological quantum theory</h3>
+          <h3>Algebraic and categorical structures for modular functors and
+quantum codes</h3>
           <p><strong>Instructor:</strong> Christoph Schweigert <br>(<em>Hamburg University</em>)</p>
-          <p>TBA</p>
         </div>
         <div class="card">
           <h3>Homology of racks and quandles</h3>
