--- a/summer-school/schedule.html
+++ b/summer-school/schedule.html
@@ -158,9 +158,17 @@ discuss the Delannoy category.
 </p>
         </div>
         <div class="card">
-          <h3>TBA</h3>
+          <h3>Algebraic and categorical structures for modular functors and
+quantum codes</h3>
           <p><strong>Instructor:</strong> Christoph Schweigert (TBC)</p>
-          <p>(abstract to be added).</p>
+          <p>We explain how the Kitaev model assigns, to a finite-dimensional
+semisimple Hopf algebra $H$ and a surface equipped with a triangulation,
+a quantum code. The protected subspaces of this code carry
+representations of the mapping class group of the surface, which can be
+used to construct quantum gates. This structure naturally organizes in
+terms of a modular  functor. Depending on time, we will extend this
+discussion to modular functors with defects. We will sketch some of
+their applications in representation theory and mathematical physics.</p>
         </div>
         <div class="card">
           <h3>Homology of racks and quandles</h3>
