--- a/summer-school/location.html
+++ b/summer-school/location.html
@@ -20,8 +20,7 @@
     <section>
       <h2>Venue</h2>
       <div class="notice">
-        <strong>TBA.</strong> Campus, building, and room information will be added here once confirmed.
-      </div>
+        <strong>LIC.0.04 Learning Theatre</strong> VUB Etterbeek Campus.</div>
       <div class="kv" style="margin-top: 1rem;">
         <div class="k">City</div><div>Brussels, Belgium</div>
         <div class="k">Host</div><div>Vrije Universiteit Brussel (VUB)</div>
