--- a/summer-school/registration.html
+++ b/summer-school/registration.html
@@ -17,6 +17,8 @@
       </p>
     </section>
 
+    <!-- registration: https://forms.office.com/e/8y5uqrb7dj -->
+
     <section>
       <h2>Status</h2>
       <div class="notice">
