--- a/summer-school/index.html
+++ b/summer-school/index.html
@@ -22,7 +22,7 @@
         <span class="badge">Networking</span>
       </div>
       <div class="cta-row">
-        <a class="button" href="registration.html">Registration (TBA)</a>
+        <a class="button" href="registration.html">Registration</a>
         <a class="button secondary" href="schedule.html">View draft programme</a>
       </div>
     </section>
@@ -32,7 +32,7 @@
       <div class="kv">
         <div class="k">Dates</div><div>8–12 June 2026</div>
         <div class="k">City</div><div>Brussels, Belgium</div>
-        <div class="k">Venue</div><div>LIC.0.04 Learning Theatre - Etterbeek Campus</em>)</div>
+        <div class="k">Venue</div><div>LIC.0.04 Learning Theatre - VUB Etterbeek Campus</em></div>
         <div class="k">Audience</div><div>MSc / PhD / Postdoc / Researchers</div>
         <div class="k">Format</div><div>Four mini-courses + poster session</div>
         <div class="k">Fees</div><div><em>TBA</em></div>
