--- a/summer-school/registration.html
+++ b/summer-school/registration.html
@@ -13,7 +13,7 @@
     <section class="hero">
       <h2>Registration</h2>
       <p class="subtitle">
-        Registration details will be published here once the form and fees are finalised.
+      Registration is mandatory. Deadline: TBA.
       </p>
     </section>
 
@@ -22,7 +22,8 @@
     <section>
       <h2>Status</h2>
       <div class="notice">
-        <strong>TBA.</strong> Registration open/close dates, fees, and the registration link will be added soon.
+      Please register <href=https://forms.office.com/e/8y5uqrb7dj>here</href>.
+      <!--  <strong>TBA.</strong> Registration open/close dates, fees, and the registration link will be added soon.-->
       </div>
 
       <div class="kv" style="margin-top: 1rem;">
